--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,32 +1,32 @@
 @font-face {
-    font-family: 'Audiowide';
+    font-family: Audiowide;
     font-weight: 400;
     font-style: normal;
     src: local('Audiowide'),
-        url(../fonts/Audiowide.eot) format('eot'),
-        url(../fonts/Audiowide.woff2) format('woff2'),
-        url(../fonts/Audiowide.woff) format('woff');
+        url(/fonts/Audiowide.eot) format('eot'),
+        url(/fonts/Audiowide.woff2) format('woff2'),
+        url(/fonts/Audiowide.woff) format('woff');
     font-display: swap;
 }
 
 @font-face {
-    font-family: 'inter';
+    font-family: inter;
     font-weight: 400;
     font-style: normal;
     src: local('Inter'),
-        url(../fonts/Inter.eot) format('eot'),
-        url(../fonts/Inter.woff2) format('woff2'),
-        url(../fonts/Inter.woff) format('woff');
+        url(/fonts/Inter.eot) format('eot'),
+        url(/fonts/Inter.woff2) format('woff2'),
+        url(/fonts/Inter.woff) format('woff');
     font-display: swap;
 }
 
 @font-face {
-    font-family: 'Mono';
+    font-family: Mono;
     font-weight: 400;
     font-style: normal;
     src: local('Mono'),
-        url(../fonts/Mono.eot) format('eot'),
-        url(../fonts/Mono.woff2) format('woff2'),
-        url(../fonts/Mono.woff) format('woff');
+        url(/fonts/Mono.eot) format('eot'),
+        url(/fonts/Mono.woff2) format('woff2'),
+        url(/fonts/Mono.woff) format('woff');
     font-display: swap;
 }
