--- a/css/style.css
+++ b/css/style.css
@@ -987,6 +987,12 @@ html, body {
     }
 }
 
+/*===============================1250PX=========================================*/
+@media(max-width: 1300px) {
+.header__icons{
+    padding-left: 400px;
+}
+}
 /*==============================1200PX========================================*/
 @media(max-width: 1200px) {
     .header__icons {
@@ -1026,11 +1032,22 @@ html, body {
         width: 782px;
         height: 493px;
     }
+    .discord__img{
+        margin-left: 450px;
+    }
 }
-
+/*==============================1100PX=========================================*/
+@media(max-width: 1150px) {
+    .header__icons{
+        padding-left: 325px;
+    }
+}
 /*==============================1100PX=========================================*/
 
 @media(max-width: 1100px) {
+    .header__icons{
+        padding-left: 300px;
+    }
     .story__accordeon-box {
         margin-left: 200px;
         width: 740px;
@@ -1039,6 +1056,12 @@ html, body {
 
     .story__accordeon-item {
         width: 200px;
+    }
+    .team__box-item{
+        margin-right: 0;
+    }
+    .discord__img{
+        margin-left: 400px;
     }
 }
 
@@ -1400,7 +1423,7 @@ html, body {
     }
 
     .roadmap__item1 {
-        width: 430px;
+        width: 375px;
         margin-left: -15px;
     }
 
@@ -1409,13 +1432,16 @@ html, body {
     }
 
     .roadmap__item2 {
-        width: 430px;
+        width: 375px;
         margin-left: -15px;
     }
 
     .roadmap__item3 {
-        width: 430px;
+        width: 375px;
         margin-left: -15px;
+    }
+    .roadmap__item-head::before{
+        width: 374px;
     }
 
     .roadmap__item-img2 {
@@ -1482,8 +1508,8 @@ html, body {
 
     .story__accordeon-box {
         margin-left: 0px;
-        width: 385px;
-        height: 650px;
+        width: 325px;
+        height: 750px;
     }
 
     .roadmap__item1 {
@@ -1553,27 +1579,27 @@ html, body {
     }
 
     .story__accordeon-box {
-        width: 320px;
-        height: 750px;
+        width: 290px;
+        height: 850px;
     }
 
     .roadmap__item1 {
         margin-left: -2.5px;
-        width: 295px;
+        width: 275px;
     }
 
     .roadmap__item2 {
         margin-left: -2.5px;
-        width: 295px;
+        width: 275px;
     }
 
     .roadmap__item3 {
         margin-left: -2.5px;
-        width: 295px;
+        width: 275px;
     }
 
     .roadmap__item-head::before {
-        width: 295px;
+        width: 275px;
     }
 
     .questions__acc {
